--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,10 @@ Changes
 0.90
 ----
 
+- The version argument now excepts a full svn url as well. You can use
+  this to get a branch or fix any url to a specific revision with the
+  standard svn @ syntax
+
 - The wsgi script is no longer made executable and readable only by
   the user who ran buildout. This avoids problems with deployment.
 
