Applied the patch from Chris Shenton to add support for .pth files. Also added a test to make sure this new behaviour keeps working.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changes
 =======
 
+0.15
+----
+
+- Added "pth-files" option to add libraries to extra-paths from
+  site .pth files. Thanks to Chris Shenton for the patch.
+
 0.14
 ----
 
