Applied patch from Guido Wesdorp to add support for stdout/err redirecting to log file from the WSGI script.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changes
 =======
 
+Unreleased
+----------
+
+- Added an option to specify a log file for output redirection from
+  the WSGI script. Thanks to Guido Wesdorp for the patch.
+
 0.16
 ----
 
