--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changes
 =======
 
+Unreleased
+----------
+
+- Paths from eggs and extra-paths now get precedence over the default
+  system path (fixes #370420). Thanks to Horst Gutmann for the patch.
+
 0.17.4
 ------
 
