When running again with non-newest set the recipe will no longer update  the Subversion checkout

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changes
 =======
 
+Unreleased
+----------
+
+- When running again with non-newest set the recipe will no longer update
+  the Subversion checkout. Thanks  to vinilios for the patch.
+
 0.18
 ----
 
