Changes for the release including an update for fab to > 0.0.9.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,8 +4,8 @@ Changes
 0.23
 -----------
 
-- Working on support for boilerplate for django 1.2 and django 1.3.
-  It defaults to 1.3 when the version isn't 1.2.
+- Support for settings/urls boilerplate for django 1.2 and django 1.3.
+  It defaults to 1.3 when the version isn't 1.2. 
 
 0.22
 ----
