--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -7,6 +7,7 @@ Changes
 - Support python3.
 - Changed buildout and the tests to run the tests under nose.
 - Removed some old pre 0.99 unittests that dealt with download support. 
+- Moved code to github: https://github.com/rvanlaar/djangorecipe
 
 1.0
 ---
